Some minor changes to the content

--- a/AIGG/xml/install_gale_linux_text.xhtml
+++ b/AIGG/xml/install_gale_linux_text.xhtml
@@ -29,7 +29,7 @@
 					We use the hsqldb version of the GALE framework. This version uses a regular file to store its database. For small applications setting up a MySql server is not necessary and a hsqldb will be sufficient.
 					To download the GALE binary execute the following command:
 					<div class="code">
-						wget <font color="red">@@@@@@@@ Some URL @@@@@@@@@</font>
+						wget http://gale.win.tue.nl/gale-1.2.3-hsqldb.zip
 					</div>
 				</div>
 			</li>
@@ -39,9 +39,9 @@
 					Extract the zip file		
 				</div>
 				<div class="instr-body">
-					To extract the <font color="red">@@@@@@@@ Some file @@@@@@@@@</font> execute the following command:
+					To extract the gale-1.2.3-hsqldb.zip execute the following command:
 					<div class="code">
-						unzip <font color="red">@@@@@@@@ Some file @@@@@@@@@</font>
+						unzip gale-1.2.3-hsqldb.zip
 					</div>
 				</div>
 			</li>
