--- a/AIGG/xml/start_template.xhtml
+++ b/AIGG/xml/start_template.xhtml
@@ -11,22 +11,22 @@
 
 	<h1><gale:variable expr="${?title}"/></h1>
 
-	<gale:a href="Start" exec="#{Start#os, ${Start#os}-1};">decrease</gale:a>
+<!--	<gale:a href="Start" exec="#{Start#os, ${Start#os}-1};">decrease</gale:a>
 	<gale:a href="Start" exec="#{Start#os, ${Start#os}+1};">increase</gale:a>
 	<gale:variable name="#os" />
 	Global: <gale:variable name="global#os" />
 	<gale:a href="Start" exec="#{global#os, ${global#os}-1};">decrease global</gale:a>
 	<gale:a href="Start" exec="#{global#os, ${global#os}+1};">increase global</gale:a>
-	<p>
-	<gale:object><gale:attr-variable name="data" expr="${?introduction}" /></gale:object>
-	</p>
-	preferThumbnails: 
+		preferThumbnails: 
 	<gale:variable name="global#prefersThumbnails" />
 	
 	<gale:a exec="#{global#prefersThumbnails, 5};" href=""  id="test-call"/>
 	<input type="checkbox" onclick="callAsync(&quot;test-call&quot;)">
 		Test asynchronuous callbacks
-	</input>
+	</input> -->
+	<p>
+	<gale:object><gale:attr-variable name="data" expr="${?introduction}" /></gale:object>
+	</p>
 
 	<!-- display the installation instruction for all the OS -->
 	<div id="installation-links">
